@@ -1,13 +1,6 @@
 # Host: S390, running Linux
-
-XM_FILE= xm-linux.h
-XM_CLIBS=
-
 NAT_FILE= nm-linux.h
 NATDEPFILES= infptrace.o inftarg.o fork-child.o corelow.o s390-nat.o \
 	core-aout.o core-regset.o linux-proc.o gcore.o thread-db.o lin-lwp.o \
 	proc-service.o linux-nat.o
 LOADLIBES = -ldl -rdynamic
-
-
-
